# TIMSImaging

./: .bumpversion.cfg  .cruft.json  .gitignore  CITATION.cff  LICENSE  README.md  basic_use.ipynb  pyproject.toml  requirements.txt
docs/source/: conf.py  installation.rst
notebooks/.ipynb_checkpoints/: precursor_selection-checkpoint.ipynb
notebooks/Case_study1/: 3-mouse_kidney_segmentation.html  3-mouse_kidney_segmentation.qmd  4-timsconvert_comparison.html  4-timsconvert_comparison.qmd  _quarto.yml  index.qmd  search.json
notebooks/Case_study1/_book/: 3-mouse_kidney_segmentation.html  4-timsconvert_comparison.html  index.html  search.json
notebooks/Case_study2/: .Rhistory  5-microbial_culture.html  5-microbial_culture.ipynb  6-precursor_selection.html  6-precursor_selection.qmd  _quarto.yml  index.html  index.qmd  search.json
notebooks/Case_study2/.ipynb_checkpoints/: 5-microbial_culture-checkpoint.ipynb  6-precursor_selection-checkpoint.qmd
notebooks/Case_study2/_book/: 5-microbial_culture.html  search.json
notebooks/Case_study3/: _quarto.yml  index.html  index.qmd  metaspace_annotations.csv  search.json
notebooks/Case_study3/_book/: search.json
notebooks/Vignette1/: 1-basic_use.ipynb
notebooks/Vignette2/: 2-mouse_kidney.ipynb
notebooks/Vignette3/: 3-mouse_kidney_segmentation.Rmd  3-mouse_kidney_segmentation.html  3-mouse_kidney_segmentation.qmd
notebooks/Vignette4/: 4-timsconvert_comparison.Rmd  4-timsconvert_comparison.qmd  4-timsconvert_job.sh
notebooks/Vignette5/: 5-microbial_culture.ipynb
notebooks/Vignette6/: 6-precursor_selection.Rmd  6-precursor_selection.html  6-precursor_selection.qmd  spatial_model_results.csv  spatial_timsconvert.csv
notebooks/ion_mobility_compare/: timsconvert_compare.html
notebooks/mouse_kidney/: timsconvert_compare.Rmd  timsconvert_compare.html
src/timsimaging/: __init__.py  calibration.py  io.py  plotting.py  plotting_ds.py  spectrum.py  utils.py  version.py
src/timsimaging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/timsimaging/.ipynb_checkpoints/: plotting-checkpoint.py  spectrum-checkpoint.py
tests/: __init__.py  test_core.py  test_version.py
